# solana-gateway-contracts

./: .prettierignore  Anchor.toml  Cargo.toml  README.md  eslint.config.mjs  package.json  run.sh
programs/gateway-minter/: Cargo.toml
programs/gateway-minter/src/: attestation.rs  error.rs  events.rs  instructions.rs  lib.rs  seeds.rs  state.rs  utils.rs
programs/gateway-minter/src/instructions/: accept_ownership.rs  add_attester.rs  add_token.rs  burn_token_custody.rs  gateway_mint.rs  initialize.rs  pause.rs  remove_attester.rs  transfer_ownership.rs  unpause.rs  update_pauser.rs  update_token_controller.rs
programs/gateway-wallet/: Cargo.toml
quickstart/: README.md  burnIntentTransformers.js  gateway-client.js  package-lock.json  package.json
quickstart/evm/: deposit.js  setup.js  typed-data.js
quickstart/solana/: attestation.js  burnIntent.js  deposit.js  idls.js  setup.js  solanaMinterClient.js  solanaWalletClient.js
quickstart/transfers/: avaxToSolana.js  solanaToSolana.js
shared/: Cargo.toml
shared/src/: lib.rs
tests/: attestation.ts  burn_data.ts  burn_intent.ts  constants.ts  utils.ts
tests/gateway-minter/: accept_ownership.test.ts  add_attester.test.ts  add_token.test.ts  burn_token_custody.test.ts  gateway_mint.test.ts  gateway_mint_with_params.test.ts  initialize.test.ts  pause.test.ts  remove_attester.test.ts  test_client.ts  transfer_ownership.test.ts  unpause.test.ts  update_pauser.test.ts  update_token_controller.test.ts
tests/gateway-wallet/: accept_ownership.test.ts  add_burn_signer.test.ts  add_delegate.test.ts  add_token.test.ts  (+19 more)
(+34 files in other folders)
