[package]
name = "gateway-minter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway_minter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi", "init-if-needed"] }
anchor-spl = "0.31.1"
gateway-shared = { path = "../../shared" }
solana-security-txt = "1.1.1"
